# nrf_radio_test_sample

./: Cargo.toml  LICENSE  README
.cargo/: config.toml
src/: main.rs
