[package]
name = "nrf52840-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
nrf52840-hal = "0.16"
nrf_radio = { git = "https://github.com/hubertmis/nrf_radio", rev = "f906484dd889aa7e80155e5b7be91a2019b6eee2" }
#nrf_radio = { path = "../nrf_radio" }

[features]
default = [
    "other-feature",
]

other-feature = []
