[package]
name = "nrf52840-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
nrf52840-hal = "0.16"
nrf_radio = { git = "https://github.com/hubertmis/nrf_radio", features = ["nrf52840"], rev = "61ab654f47e0f2dc4e6d04a7f2ee9959c9830dab" }
#nrf_radio = { path = "../nrf_radio", features = ["nrf52840"] }

[features]
default = [
    "other-feature",
]

other-feature = []
