[package]
name = "nrf52840-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
nrf52840-hal = "0.16"
nrf_radio = { git = "https://github.com/hubertmis/nrf_radio", features = ["nrf52840"], rev = "e7c4590d6681d2a89ba173ac75b0be66df40e10c" }
#nrf_radio = { path = "../nrf_radio", features = ["nrf52840"] }

[features]
default = [
    "other-feature",
]

other-feature = []
